--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title> Texto bem bacana </title>
+    <title> механизм </title>
     <meta charset="utf-8">
     <meta name="author" content="Rafael A.">
     <meta name="description" content="Lista de documentos">
